--- a/hw2-abhimank/pom.xml
+++ b/hw2-abhimank/pom.xml
@@ -75,4 +75,8 @@
 			<version>2.4.0</version>
 		</dependency>
 	</dependencies>
+	<scm>
+  	<connection>scm:git:git@github.com:abhimanu/hw2-abhimank.git</connection>
+  	<developerConnection>scm:git:git@github.com:abhimanu/hw2-abhimank.git</developerConnection>
+  </scm>
 </project>
